newSemi + update info

--- a/HRS.html
+++ b/HRS.html
@@ -114,18 +114,18 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
+     
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Kỹ năng Hou-Ren-Sou</h2>
-        <div class="breadcrumbs">
+        <div class='img-demo' ></div>
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Kỹ năng Hou-Ren-Sou</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
@@ -136,14 +136,12 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
+              <!-- <h2 class="title-line-left">
                 ĐỂ THỰC HIỆN TỐT KỸ NĂNG HOU-REN-SOU TRONG DOANH NGHIỆP
                 NHẬT
-              </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1-2 ngày</p>
-              </div>
+              </h2> -->
+              <h2 class="title-line-left text-black uppercase">Kỹ năng<br> Hou-Ren-Sou</h2>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -170,6 +168,10 @@
                     2. Anh/Chị quan tâm, mong muốn hiểu thêm kỹ năng<br> &nbsp; &nbsp;Hou-Ren-Sou
                   </li>
                 </ol>
+              </div>
+              <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1-2 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
@@ -249,8 +251,8 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class='text-blue'>Phần 1: </span>Định nghĩa và tầm quan trọng
+                <h4 class="title text-blue uppercase">
+                  <span class='text-blue uppercase'>Phần 1: </span>Định nghĩa và tầm quan trọng
                 </h4>
                 <ol>
                   <li>1. Định nghĩa</li>
@@ -260,8 +262,8 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần 2:</span> Để ứng dụng Hou-Ren-Sou hiệu quả
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 2:</span> Để ứng dụng Hou-Ren-Sou hiệu quả
                 </h4>
 
                 <h5>I. Kiến thức cơ bản</h5>
@@ -295,8 +297,8 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần 3: </span>Những lưu ý khi Hou-Ren-Sou với cấp trên
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 3: </span>Những lưu ý khi Hou-Ren-Sou với cấp trên
                 </h4>
                 <ol>
                   <li>
@@ -337,9 +339,9 @@
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Ý nghĩa, rất có ích để áp dụng trong công việc chuyên môn, và những sinh hoạt trong đời sống
               </div>
@@ -348,9 +350,9 @@
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Giúp nâng cao kỹ năng mềm, bài giảng hay, giảng viên vui vẻ, chu đáo
               </div>
@@ -359,9 +361,9 @@
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Chương trình học hôm nay rất hay, bổ ích cho bản thân trong công việc của công ty, gia đình và xã hội
               </div>
