--- a/PDCA.html
+++ b/PDCA.html
@@ -134,35 +134,25 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Ứng dụng chu trình PDCA</h2>
-        <div class="breadcrumbs">
-          <ul>
-            <li class="text-blue">
-              <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
-            </li>
-            <li class="text-blue">Ứng dụng chu trình PDCA</li>
-          </ul>
-        </div>
+        <div class='img-demo' ></div>
+        
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
+              <!-- <h2 class="title-line-left">
                 ỨNG DỤNG CHU TRÌNH PDCA VÀO TRONG CÔNG VIỆC HÀNG NGÀY
-              </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1-2 ngày</p>
-              </div>
+              </h2> -->
+              <h2 class="title-line-left text-black uppercase">Ứng dụng<br> chu trình PDCA</h2>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -188,6 +178,10 @@
                     thức về PDCA
                   </li>
                 </ol>
+              </div>
+              <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1-2 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
@@ -258,8 +252,8 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần I:</span> Khái quát về PDCA
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 1:</span> Khái quát về PDCA
                 </h4>
                 <ol>
                   <li>1. PDCA là gì?</li>
@@ -273,8 +267,8 @@
               </div>
 
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần II:</span> Để thực hiện PDCA hiệu
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 2:</span> Để thực hiện PDCA hiệu
                   quả và triệt để
                 </h4>
                 <h5>2.1. PLAN: Xác định rõ mục tiêu, lập kế hoạch thực hiện</h5>
@@ -340,9 +334,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Các trò chơi mang tính học tập cao, dễ hiểu, không gây nhàm chán
               </div>
@@ -353,9 +347,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Chương trình tốt cô Thảo dạy hay và truyền đạt những kĩ năng rất
                 dễ hiểu.
@@ -367,9 +361,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Nâng cao kiến thức chuyên môn & nghiệp vụ trong công việc
               </div>
