--- a/basicWorkingSkills.html
+++ b/basicWorkingSkills.html
@@ -132,35 +132,30 @@
     <!--=================== HEADER END ===================-->
 
     <!--=================== PAGE-TITLE ===================-->
-    <div
-      class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
-    >
+    <div class="page-title">
       <div class="container">
-        <h2 class="title-line-left text-white">Kỹ năng làm việc hiệu quả</h2>
-        <div class="breadcrumbs">
+        <div class="img-demo"></div>
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Kỹ năng làm việc hiệu quả</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">KỸ NĂNG LÀM VIỆC HIỆU QUẢ</h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1-2 ngày</p>
-              </div>
+              <!-- <h2 class="title-line-left">KỸ NĂNG LÀM VIỆC HIỆU QUẢ</h2> -->
+              <h2 class="title-line-left text-black uppercase">Kỹ năng làm việc hiệu quả</h2>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -172,8 +167,9 @@
                   </li>
 
                   <li>
-                    3. Hệ thống hóa các kỹ năng làm việc cơ bản cần có của 
-                    <br> &nbsp; &nbsp;1 Nhân viên làm việc chuyên nghiệp
+                    3. Hệ thống hóa các kỹ năng làm việc cơ bản cần có của
+                    <br />
+                    &nbsp; &nbsp;1 Nhân viên làm việc chuyên nghiệp
                   </li>
                   <li>4. Giúp ngày càng nâng cao chất lượng công việc</li>
                 </ol>
@@ -184,11 +180,16 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, <br> &nbsp; &nbsp;kiến
-                    thức về tác phong làm việc chuyên nghiệp và<br> &nbsp; &nbsp;kỹ năng làm việc
-                    cơ bản
+                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, <br />
+                    &nbsp; &nbsp;kiến thức về tác phong làm việc chuyên nghiệp
+                    và<br />
+                    &nbsp; &nbsp;kỹ năng làm việc cơ bản
                   </li>
                 </ol>
+              </div>
+              <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1-2 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
@@ -267,21 +268,21 @@
             <div class="history-info-cover">
               <div class="history-info">
                 <h4 class="title text-blue">
-                  <span class="text-blue">Phần I: </span>DẪN NHẬP
+                  <span class="text-blue uppercase">Phần 1: </span>DẪN NHẬP
                 </h4>
                 <ol>
                   <li>1. Hiểu về tổ chức</li>
                   <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
                   <li>
-                    3. Để làm việc hiệu quả tại DN Nhật Bản, A.S.K <br> &nbsp; &nbsp;
-                    (Thái độ - Kỹ năng - Kiến thức) cần có.
+                    3. Để làm việc hiệu quả tại DN Nhật Bản, A.S.K <br />
+                    &nbsp; &nbsp; (Thái độ - Kỹ năng - Kiến thức) cần có.
                   </li>
                 </ol>
               </div>
 
               <div class="history-info">
                 <h4 class="title uppercase text-blue">
-                  <span class="text-blue">Phần II: </span>Nâng cao kỹ năng làm
+                  <span class="text-blue">Phần 2: </span>Nâng cao kỹ năng làm
                   việc cơ bản
                 </h4>
                 <h5 class="">
@@ -303,7 +304,7 @@
                       <li>3. 8 bước thực hiện</li>
                     </ul>
                   </li>
-                  <br>
+                  <br />
                   <li>
                     <h6>
                       II. Ứng dụng chu trình PDCA vào trong công việc hàng ngày
@@ -317,7 +318,7 @@
                       </li>
                     </ul>
                   </li>
-                  <br>
+                  <br />
                   <li>
                     <h6>III. Kỹ năng Hou-ren-sou</h6>
                     <ol>
@@ -363,14 +364,14 @@
                       </li>
                     </ol>
                   </li>
-                  <br>
+                  <br />
                   <li>
                     <h6>
                       IV. Phát huy tinh thần team-work, đạt mục tiêu chung
                     </h6>
                     <ul>
                       <li>1. Giữ chữ “Hòa”</li>
-                      <li>2. Trách nhiệm mỗi cá nhân </li>
+                      <li>2. Trách nhiệm mỗi cá nhân</li>
                     </ul>
                   </li>
                 </ol>
