--- a/claimShooting.html
+++ b/claimShooting.html
@@ -79,15 +79,35 @@
               <nav class="nav-menu">
                 <ul class="nav-list">
                   <li>
-                    <a href="index.html" class='text-center'>Trang chủ</a>
+                    <a href="index.html" class="text-center">Trang chủ</a>
                   </li>
-                  <li><a href="index.html#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
-                  <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
-                  <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
-                  <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
-                  <li><a href="XTTM.html" class='text-center'>Xúc tiến Thương mại</a></li>
-                  <li><a href="TVTD.html" class='text-center w-110' >Tư vấn tuyển dụng</a></li>
-                
+                  <li>
+                    <a href="index.html#trainingHouse" class="text-center"
+                      >Đào tạo Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="seminor.html" class="text-center">Hội thảo</a>
+                  </li>
+                  <li>
+                    <a href="educationBusiness.html" class="text-center"
+                      >Tư vấn Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="CSKH.html" class="text-center">Tư vấn CSKH </a>
+                  </li>
+                  <li>
+                    <a href="XTTM.html" class="text-center"
+                      >Xúc tiến Thương mại</a
+                    >
+                  </li>
+                  <li>
+                    <a href="TVTD.html" class="text-center w-110"
+                      >Tư vấn tuyển dụng</a
+                    >
+                  </li>
+
                   <li><a href="contacts.html">Liên hệ</a></li>
                 </ul>
               </nav>
@@ -112,52 +132,46 @@
     <!--=================== HEADER END ===================-->
 
     <!--=================== PAGE-TITLE ===================-->
-    <div
-      class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
-    >
+    <div class="page-title">
       <div class="container">
-        <h2 class="title-line-left text-white"> Kỹ năng xử lý phàn nàn để luôn có Khách hàng thân thiết.</h2>
-        <div class="breadcrumbs">
-          <ul>
-            <li class="text-blue">
-              <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
-            </li>
-            <li class="text-blue"> Kỹ năng xử lý phàn nàn để luôn có Khách hàng thân thiết.</li>
-          </ul>
-        </div>
+        <div class="img-demo"></div>
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
-                NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH
-                NGHIỆP NHẬT
+              <h2 class="title-line-left text-black uppercase">
+                Kỹ năng xử lý phàn nàn Khách hàng
               </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1 ngày</p>
-              </div>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
                 <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
-                  <li>1. Hiểu rõ hơn về văn hóa doanh nghiệp Nhật Bản</li>
                   <li>
-                    2. Hiểu rõ hơn về suy nghĩ, cách làm việc của người Nhật
+                    1. Thấu hiểu vai trò & nhiệm vụ của 1 Nhân viên Sales<br> &nbsp; &nbsp; / Chăm
+                    sóc Khách hàng chuyên nghiệp
                   </li>
                   <li>
-                    3. Hệ thống hóa các kỹ năng, kiến thức cơ bản của tác phong
-                    làm việc chuyên nghiệp
+                    2. Nắm vững kiến thức & 5 cấp độ về chăm sóc<br> &nbsp; &nbsp;  Khách hàng theo
+                    tinh thần Omotenashi của Nhật Bản
                   </li>
-                  <li>4. Giúp ngày càng nâng cao chất lượng công việc</li>
+                  <li>
+                    3. Thấu hiểu tâm lý, mong đợi của Khách hàng khi họ<br> &nbsp; &nbsp;  phàn nàn
+                  </li>
+                  <li>
+                    4. Vận dụng 7 bước xử lý phàn nàn của Khách hàng<br> &nbsp; &nbsp;  hiệu quả,
+                    nhằm giữ chân Khách hàng
+                  </li>
+                  <li>
+                    5. Áp dụng các kỹ thuật khi xử lý phàn nàn của<br> &nbsp; &nbsp;  Khách hàng
+                  </li>
                 </ol>
               </div>
 
@@ -166,25 +180,26 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi tác phong làm việc
-                    chuyên nghiệp tại DN Nhật
+                    2. Anh/Chị quan tâm, mong muốn học hỏi Kỹ năng<br> &nbsp; &nbsp;  tổ chức cuộc
+                    họp hiệu quả
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1 ngày</p>
+              </div>
+              <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
-                <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
-                </p>
+                <p>Thông báo sau.</p>
               </div>
               <div class="overview-info-item">
                 <a
-                data-fancybox
-                href="./assets/img/QR-demo.png"
-                class="register-btn register-QR"
-                >Đăng ký tham gia</a
-              >
+                  data-fancybox
+                  href="./assets/img/QR-demo.png"
+                  class="register-btn register-QR"
+                  >Đăng ký tham gia</a
+                >
               </div>
             </div>
           </div>
@@ -223,7 +238,8 @@
               <div class="overview-info-item">
                 <h5>Lưu ý:</h5>
                 <p>
-					Nội dung khoá học có thể điều chỉnh một ít, phù hợp với đối tượng tham dự.
+                  Nội dung khoá học có thể điều chỉnh một ít, phù hợp với đối
+                  tượng tham dự.
                 </p>
               </div>
               <div class="history-cert">
@@ -249,71 +265,75 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title"><span>Phần I: </span>DẪN NHẬP</h4>
+                <h4 class="title text-blue uppercase">
+                  Phần 1: Kiến thức tổng quát
+                </h4>
                 <ol>
-                  <li>1. Hiểu về tổ chức</li>
-                  <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
+                  <li>1. Chăm sóc Khách hàng (CSKH) là gì?</li>
+                  <li>2. Nhiệm vụ của đội ngũ bán hàng, Chăm sóc Khách hàng</li>
+                  <li>3. CSKH theo tinh thần dịch vụ Omotenashi là gì?</li>
+                  <li>4. 5 cấp độ phục vụ Khách hàng theo chuẩn quốc tế</li>
                   <li>
-                    3. Đặc trưng cơ bản của doanh nghiệp Nhật/người Nhật và
-                    doanh nghiệp Việt/người Việt
-                  </li>
-                  <li>
-                    4. Để làm việc hiệu quả tại doanh nghiệp Nhật Bản, tác
-                    phong/kỹ năng cơ bản cần lưu ý
+                    5. Để có thể chăm sóc Khách hàng chuyên nghiệp bằng cả trái
+                    tim
                   </li>
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần II:</span> Để nâng cao tác phong làm việc chuyên
-                  nghiệp cơ bản tại doanh nghiệp Nhật
+                <h4 class="title text-blue uppercase">
+                  Phần 2: Tầm quan trọng của Khách hàng & phàn nàn Khách hàng
                 </h4>
                 <ol>
+                  <li>1. Khách hàng, Họ là Ai?</li>
                   <li>
-                    1. Tác phong cơ bản khi chào hỏi - Trang phục
-                    <ul>
-                      <li>
-                        - Chào hỏi (thái độ, âm lượng, giọng nói) trong nội bộ,
-                        với khách hàng
-                      </li>
-                      <li>- Trao danh thiếp</li>
-                      <li>- Vị trí ngồi trong phòng họp</li>
-                      <li>- Phục vụ trà nước</li>
-                      <li>- Tiễn khách trong thang máy</li>
-                      <li>- Cảm ơn – xin lỗi</li>
-                    </ul>
+                    2. Tại sao Khách hàng phàn nàn? Họ mong đợi điều gì khi phàn
+                    nàn?
                   </li>
                   <li>
-                    2. Tác phong cơ bản trong khi làm việc
-                    <ul>
-                      <li>- Giữ chữ “Hòa” trong doanh nghiệp Nhật</li>
-                      <li>- Giờ giấc, cuộc hẹn</li>
-                      <li>- Đối ứng qua điện thoại</li>
-                      <li>- Giao tiếp qua email</li>
-                      <li>
-                        - Giao tiếp, gặp gỡ hàng ngày (thái độ, ngôn từ cơ bản):
-                        nên & không nên
-                      </li>
-                      <li>- 5S</li>
-                    </ul>
+                    3. Hậu quả nếu xử lý phàn nàn Khách hàng không hiệu quả /
+                    Định luật Goodman
                   </li>
                   <li>
-                    3. Tính tuân thủ trong doanh nghiệp Nhật = Ngăn ngừa các
-                    hành vi bất chính
-                    <ul>
-                      <li>- Tính tuân thủ là gì?</li>
-                      <li>- Tầm quan trọng của việc tuân thủ</li>
-                      <li>
-                        - Ba nhóm hành vi bị xem là bất chính trong DN Nhật Bản
-                      </li>
-                      <li>- Quản lý rủi ro về việc tuân thủ</li>
-                      <li>- Xử lý trường hợp không tuân thủ</li>
-                      <li>-Trách nhiệm & nghĩa vụ của Nhân viên</li>
-                    </ul>
+                    4. Tầm quan trọng nếu xử lý phàn nàn Khách hàng hiệu quả
                   </li>
                 </ol>
               </div>
-              
+
+              <div class="history-info">
+                <h4 class="title text-blue uppercase">
+                  Phần 3: 7 bước để xử lý phàn nàn Khách hàng hiệu quả
+                </h4>
+                <ol>
+                  <li>1. Lắng nghe thấu cảm</li>
+                  <li>2. Xin lỗi chân thành</li>
+                  <li>3. Thuật lại sự việc</li>
+                  <li>4. Đưa ra đối sách nhanh chóng</li>
+                  <li>5. Thể hiện lòng biết ơn</li>
+                  <li>6. Hou-ren-sou với cấp trên / phòng ban</li>
+                  <li>
+                    7. PDCA nhanh nhất có thể, mang lại sự hài lòng cho Khách
+                    hàng
+                  </li>
+                  <li>8. Luôn quan tâm, kết nối với Khách hàng</li>
+                </ol>
+              </div>
+
+              <div class="history-info">
+                <h4 class="title text-blue uppercase">
+                  Phần 4: Kỹ thuật / công cụ triển khai
+                </h4>
+                <ol>
+                  <li>1. Phương thức giao tiếp 7-38-55</li>
+                  <li>2. Lắng nghe thấu cảm: 5 cấp độ</li>
+                  <li>3. 3 bước giao tiếp thấu cảm</li>
+                  <li>
+                    4. 5 – Luôn, 5-Không khi giao tiếp với Khách hàng phàn nàn
+                  </li>
+                  <li>
+                    5. Tác phong chuyên nghiệp khi giao tiếp với Khách hàng
+                  </li>
+                </ol>
+              </div>
             </div>
           </div>
         </div>
@@ -323,57 +343,58 @@
 
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
-
-		<div class="container">
-		  <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
-		  <!-- <p class="slogan">
+      <div class="container">
+        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
+        <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
 		  </p> -->
-		  <div class="slider-testimonials">
-			<div class="slide-testimonial">
-			  <div class="testimonial-item">
-				<!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-				<span class="slide-quote"
-				  ><i class="fa fa-quote-left" aria-hidden="true"></i
-				></span>
-				<div class="testimon-content">
-				  Chương trình thực tế ứng dụng cao, có thể áp dụng trong công việc hiện tại
-				</div>
-				<!-- <h4 class="name">Louisa Russell</h4>
+        <div class="slider-testimonials">
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
+              <span class="slide-quote"
+                ><i class="fa fa-quote-left" aria-hidden="true"></i
+              ></span>
+              <div class="testimon-content">
+                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
+                việc hiện tại
+              </div>
+              <!-- <h4 class="name">Louisa Russell</h4>
 				<div class="prof">Regular Client</div> -->
-			  </div>
-			</div>
-			<div class="slide-testimonial">
-			  <div class="testimonial-item">
-				<!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-				<span class="slide-quote"
-				  ><i class="fa fa-quote-left" aria-hidden="true"></i
-				></span>
-				<div class="testimon-content">
-				  Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của tôi 
-				</div>
-				<!-- <h4 class="name">Samson Peters</h4>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
+              <span class="slide-quote"
+                ><i class="fa fa-quote-left" aria-hidden="true"></i
+              ></span>
+              <div class="testimon-content">
+                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
+                tôi
+              </div>
+              <!-- <h4 class="name">Samson Peters</h4>
 				<div class="prof">Regular Client</div> -->
-			  </div>
-			</div>
-			<div class="slide-testimonial">
-			  <div class="testimonial-item">
-				<!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-				<span class="slide-quote"
-				  ><i class="fa fa-quote-left" aria-hidden="true"></i
-				></span>
-				<div class="testimon-content">
-          Học hỏi và bổ sung nhiều kiến thức cho bản thân.
-				</div>
-				<!-- <h4 class="name">Marry James</h4>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
+              <span class="slide-quote"
+                ><i class="fa fa-quote-left" aria-hidden="true"></i
+              ></span>
+              <div class="testimon-content">
+                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
+              </div>
+              <!-- <h4 class="name">Marry James</h4>
 				<div class="prof">Regular Client</div> -->
-			  </div>
-			</div>
-		  </div>
-		</div>
-	  </section>
-	  <!--=============== S-TESTIMONIALS END ===============-->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--=============== S-TESTIMONIALS END ===============-->
 
     <!--===================== FOOTER =====================-->
     <footer>
@@ -384,11 +405,14 @@
               <img src="assets/img/Logo-footer.png" alt="logo" />
             </a>
             <div class="footer-text">
-				CÔNG TY TNHH TV-TM-DV <br> OMOTENASHI VIỆT-NHẬT
+              CÔNG TY TNHH TV-TM-DV <br />
+              OMOTENASHI VIỆT-NHẬT
             </div>
             <ul class="soc-link">
               <li>
-                <a target="_blank" href="https://www.facebook.com/groups/www.omotenashi.com.vn/"
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/groups/www.omotenashi.com.vn/"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
               </li>
@@ -398,14 +422,14 @@
                   ><i class="fab fa-youtube"></i
                 ></a>
               </li>
-			  <li>
-				<a
-				  target="_blank"
-				  href="mailto:
+              <li>
+                <a
+                  target="_blank"
+                  href="mailto:
 				  thao.nguyen@omotenashi.com.vn"
-				  ><i class="fas fa-envelope"></i
-				></a>
-			  </li>
+                  ><i class="fas fa-envelope"></i
+                ></a>
+              </li>
             </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
@@ -414,8 +438,9 @@
               <li>
                 <i class="fas fa-map-marker-alt"></i>
                 <a href="contacts.html"
-                  >Office 2, 8th Floor, Office area, Pearl Plaza Building, 561A Dien Bien Phu Street, Ward 25, Binh Thanh District, HCM City </a
-                >
+                  >Office 2, 8th Floor, Office area, Pearl Plaza Building, 561A
+                  Dien Bien Phu Street, Ward 25, Binh Thanh District, HCM City
+                </a>
               </li>
               <li>
                 <i class="fa fa-phone" aria-hidden="true"></i>
@@ -423,7 +448,9 @@
               </li>
               <li>
                 <i class="fas fa-globe" aria-hidden="true"></i>
-                <a href="https://www.omotenashi.com.vn/" target="_blank">omotenashi.com.vn</a>
+                <a href="https://www.omotenashi.com.vn/" target="_blank"
+                  >omotenashi.com.vn</a
+                >
               </li>
             </ul>
           </div>
@@ -493,15 +520,19 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-				© 2021 Bản quyền thuộc về 
-                <a target="_blank" href="https://www.omotenashi.com.vn/">OMOTENASHI </a>
+                © 2021 Bản quyền thuộc về
+                <a target="_blank" href="https://www.omotenashi.com.vn/"
+                  >OMOTENASHI
+                </a>
               </div>
             </div>
             <div class="col-8">
               <ul class="footer-menu">
-                <li><a href="seminor.html" >Hội thảo</a></li>
-                <li><a href="educationBusiness.html">Tư vấn  Doanh Nghiệp</a></li>
-                <li><a href="CSKH.html" >Tư vấn CSKH </a></li>
+                <li><a href="seminor.html">Hội thảo</a></li>
+                <li>
+                  <a href="educationBusiness.html">Tư vấn Doanh Nghiệp</a>
+                </li>
+                <li><a href="CSKH.html">Tư vấn CSKH </a></li>
                 <li><a href="XTTM.html">Xúc tiến Thương mại</a></li>
                 <li><a href="contacts.html">Liên hệ</a></li>
               </ul>
