--- a/coachingSkill.html
+++ b/coachingSkill.html
@@ -114,72 +114,66 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">
-          Kỹ năng huấn luyện Nhân viên
-        </h2>
-        <div class="breadcrumbs">
+        <div class='img-demo' ></div>
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Coaching Skills</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
-                KỸ NĂNG HUẤN LUYỆN NHÂN VIÊN HIỆU QUẢ
+              <h2 class="title-line-left text-black uppercase">
+                Kỹ năng<br> huấn luyện 
               </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1 ngày</p>
-              </div>
+              
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
                 <span>NGƯỜI THAM DỰ</span>
                 <ol>
                   <li>
-                    1. Thay đổi tư duy, hiểu rõ công việc huấn luyện của nhà
-                    quản lý với nhân viên
+                    1. Thay đổi tư duy, hiểu rõ công việc huấn luyện của
+                    <br> &nbsp; &nbsp; nhà quản lý với nhân viên
                   </li>
                   <li>
-                    2. Vận hành các mô hình huấn luyện thành công từ các tập
+                    2. Vận hành các mô hình huấn luyện thành công từ các<br> &nbsp; &nbsp; tập
                     đoàn đa quốc gia
                   </li>
                   <li>
-                    3. Phát huy tối đa, tiềm năng và năng suất làm việc cá nhân
+                    3. Phát huy tối đa, tiềm năng và năng suất làm việc<br> &nbsp; &nbsp; cá nhân
                     và đội nhóm
                   </li>
                   <li>
-                    4. Tạo động lực và giữ chân nhân viên không phải bằng tiền
+                    4. Tạo động lực và giữ chân nhân viên không phải<br> &nbsp; &nbsp; bằng tiền
                   </li>
                   <li>
-                    5. Cải thiện mối quan hệ gắn kết giữa nhà quản lý và nhân
+                    5. Cải thiện mối quan hệ gắn kết giữa nhà quản lý và<br> &nbsp; &nbsp; nhân
                     viên
                   </li>
                   <li>
-                    6. Người quản lý tập trung hơn để làm những việc đúng sở
+                    6. Người quản lý tập trung hơn để làm những việc đúng<br> &nbsp; &nbsp; sở
                     trường và vai trò của mình
                   </li>
                   <li>
-                    7. Nâng cao hình ảnh, tầm ảnh hưởng của Nhà quản lý trước
+                    7. Nâng cao hình ảnh, tầm ảnh hưởng của Nhà quản lý<br> &nbsp; &nbsp; trước
                     đội nhóm và cấp trên
                   </li>
                   <li>
                     8. Phát triển tổ chức bền vững, thể hiện đúng vai trò và
-                    nhiệm vụ của Nhà quản lý
+                    <br> &nbsp; &nbsp; nhiệm vụ của Nhà quản lý
                   </li>
                 </ol>
               </div>
@@ -190,20 +184,23 @@
                   <li>1. Truởng bộ phận Nhân sự</li>
                   <li>2. Truởng bộ phận Đào tạo</li>
                   <li>
-                    3. Trưởng nhóm, trưởng bộ phận Sales, Marketing, sản xuất,
+                    3. Trưởng nhóm, trưởng bộ phận Sales, Marketing,<br> &nbsp; &nbsp; sản xuất,
                     QA-QC, Purchasing, IT
                   </li>
                   <li>
-                    4. Những Anh/Chị quan tâm, đang phụ trách công tác huấn
+                    4. Những Anh/Chị quan tâm, đang phụ trách công tác<br> &nbsp; &nbsp; huấn
                     luyện Nhân viên hàng ngày
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1 ngày</p>
+              </div>
+              <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
                 <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
+                  Thông báo sau.
                 </p>
               </div>
               <div class="overview-info-item">
@@ -278,8 +275,8 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần I: </span>TỔNG QUAN VỀ HUẤN LUYỆN HIỆU QUẢ
+                <h4 class="title text-blue uppercase">
+                  Phần I: TỔNG QUAN VỀ HUẤN LUYỆN<br> HIỆU QUẢ
                 </h4>
 
                 <ol>
@@ -292,8 +289,8 @@
               </div>
 
               <div class="history-info">
-                <h4 class="title uppercase">
-                  <span>Phần II: </span>ĐỂ HUẤN LUYỆN NHÂN VIÊN HIỆU QUẢ
+                <h4 class="title text-blue uppercase uppercase">
+                  Phần II: ĐỂ HUẤN LUYỆN NHÂN VIÊN<br> HIỆU QUẢ
                 </h4>
                 <h5 class="">I. Quy trình huấn luyện 4 bước A.B.C.Đ</h5>
                 <h6 class="">Bước 1: Am hiểu</h6>
@@ -338,7 +335,9 @@
                     </ol>
                   </li>
                 </ol>
+                <br>
                 <h5 class="">II. Nguyên tắc phản hồi F.A.S.T & 4-Khi</h5>
+                <br>
                 <h5 class="">III. 5 kỹ năng cần có người huấn luyện</h5>
                 <ol>
                   <li>1. Truyền đạt</li>
