--- a/communicationSkill.html
+++ b/communicationSkill.html
@@ -114,35 +114,33 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
+
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Kỹ năng giao tiếp hiệu quả</h2>
-        <div class="breadcrumbs">
+        <div class='img-demo' ></div>
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Kỹ năng giao tiếp hiệu quả</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
+              <!-- <h2 class="title-line-left">
                 KỸ NĂNG GIAO TIẾP HIỆU QUẢ
-              </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1-2 ngày</p>
-              </div>
+              </h2> -->
+              <h2 class="title-line-left text-black uppercase">Kỹ năng giao tiếp hiệu quả</h2>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -169,6 +167,10 @@
                     thức,<br> &nbsp; &nbsp; kỹ năng giao tiếp hiệu quả
                   </li>
                 </ol>
+              </div>
+              <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1-2 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
@@ -250,8 +252,8 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần 1: </span>Tầm quan trọng của giao tiếp
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 1: </span>Tầm quan trọng của giao tiếp
                 </h4>
                 <ol>
                   <li>1. Giao tiếp là gì?</li>
@@ -271,8 +273,8 @@
               </div>
 
               <div class="history-info">
-                <h4 class="title text-blue ">
-                  <span class='text-blue'>Phần 2:</span> Để nâng cao kỹ năng giao tiếp hiệu quả 
+                <h4 class="title text-blue uppercase ">
+                  <span class='text-blue uppercase'>Phần 2:</span> Để nâng cao kỹ năng giao tiếp hiệu quả 
                 </h4>
                 <ol>
                   <li>
@@ -322,8 +324,8 @@
               </div>
 
               <div class="history-info">
-                <h4 class="title text-blue ">
-                  <span class='text-blue'>Phần 3: </span> Ứng dụng kỹ năng giao tiếp trong công việc hàng ngày 
+                <h4 class="title text-blue uppercase ">
+                  <span class='text-blue uppercase'>Phần 3: </span> Ứng dụng kỹ năng giao tiếp trong công việc hàng ngày 
                 </h4>
                 <ol>
                   <li>I. Lập kế hoạch, triển khai công việc mới </li>
@@ -363,9 +365,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Được bổ sung kiến thức và kỹ năng như: kỹ năng giao tiếp, lắng nghe, kỹ năng check-mail và trả lời email và tác phong làm việc. 
               </div>
@@ -376,9 +378,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Học hỏi được nhiều điều hay, mới mẻ. Lớp học vui, thân thiện. Giảng viên dạy tốt, dễ hiểu
               </div>
@@ -389,9 +391,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Đưa ra những tình huống thực tế để đàm phán và giải pháp xử lý. 
               </div>
