--- a/compliance.html
+++ b/compliance.html
@@ -114,37 +114,32 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">
-          Tính tuân thủ trong Doanh nghiệp
-        </h2>
-        <div class="breadcrumbs">
+        <div class='img-demo' ></div>
+        
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Tính tuân thủ</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
-                TÍNH TUÂN THỦ TRONG DOANH NGHIỆP
+              <h2 class="title-line-left text-black uppercase">
+                Tính tuân thủ trong Doanh nghiệp
               </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>0.5 ngày</p>
-              </div>
+              
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -157,7 +152,7 @@
                   </li>
                   <li>
                     3. Vận dụng các biện pháp khi xảy ra các trường hợp không
-                    tuân thủ
+                    <br> &nbsp; &nbsp;tuân thủ
                   </li>
                 </ol>
               </div>
@@ -171,6 +166,10 @@
                     tính tuân thủ trong Doanh nghiệp
                   </li>
                 </ol>
+              </div>
+              <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>0.5 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
