--- a/delegationSkill.html
+++ b/delegationSkill.html
@@ -134,24 +134,23 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Kỹ năng phân công phân nhiệm</h2>
-        <div class="breadcrumbs">
+        <div class='img-demo' ></div>
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Kỹ năng phân công phân nhiệm</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
@@ -159,6 +158,8 @@
               <!-- <h2 class="title-line-left">
                 NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH NGHIỆP NHẬT
               </h2> -->
+              <h2 class="title-line-left text-black uppercase">Kỹ năng phân công phân nhiệm</h2>
+
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
                 <p>1 ngày</p>
@@ -265,8 +266,8 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần I: </span>Chân dung của nhà quản
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 1: </span>Chân dung của nhà quản
                   lý chuyên nghiệp, giúp cấp dưới hoàn thành công việc được giao
                   & phát triển
                 </h4>
@@ -277,8 +278,8 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần II:</span> Tầm quan trọng của
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 2:</span> Tầm quan trọng của
                   phân công phân nhiệm, giúp cấp dưới hoàn thành công việc được
                   giao
                 </h4>
@@ -288,8 +289,8 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần III: </span>Để phân công phân
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 3: </span>Để phân công phân
                   nhiệm hiệu quả, giúp cấp dưới hoàn thành công việc được giao &
                   phát triển
                 </h4>
@@ -337,8 +338,8 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần IV: </span>Những điều cần tránh
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 4: </span>Những điều cần tránh
                   khi giao việc cho Nhân viên cấp dưới
                 </h4>
               </div>
@@ -361,9 +362,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
                 việc hiện tại
@@ -375,9 +376,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
                 tôi
@@ -389,9 +390,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Học hỏi và bổ sung nhiều kiến thức cho bản thân.
               </div>
