--- a/logic.html
+++ b/logic.html
@@ -132,52 +132,50 @@
     <!--=================== HEADER END ===================-->
 
     <!--=================== PAGE-TITLE ===================-->
-    <div
-      class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
-    >
+    <div class="page-title">
       <div class="container">
-        <h2 class="title-line-left text-white">Tư duy logic</h2>
-        <div class="breadcrumbs">
+        <div class="img-demo"></div>
+
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Tư duy logic</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
+              <!-- <h2 class="title-line-left">
                 ỨNG DỤNG TƯ DUY LOGIC & PHẢN BIỆN KHI TRÌNH BÀY / BÁO CÁO VỚI
                 CẤP TRÊN
+              </h2> -->
+              <h2 class="title-line-left text-black">
+                ỨNG DỤNG TƯ DUY LOGIC & PHẢN BIỆN KHI TRÌNH BÀY /<br />
+                BÁO CÁO VỚI CẤP TRÊN
               </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1 ngày</p>
-              </div>
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
                 <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
                   <li>
-                    1. Hiểu được tầm quan trọng của tư duy phản biện &<br> &nbsp; &nbsp; tư duy
-                    logic
+                    1. Hiểu được tầm quan trọng của tư duy phản biện &<br />
+                    &nbsp; &nbsp; tư duy logic
                   </li>
                   <li>2. Hiểu 8 tiêu chuẩn của tư duy phản biện</li>
                   <li>3. Hiểu được tầm quan trọng của báo cáo, thuyết trình</li>
                   <li>
-                    4. Ứng dụng tư duy phản biện & tư duy logic khi<br> &nbsp; &nbsp; thuyết trình
-                    / báo cáo với cấp trên hiệu quả
+                    4. Ứng dụng tư duy phản biện & tư duy logic khi<br />
+                    &nbsp; &nbsp; thuyết trình / báo cáo với cấp trên hiệu quả
                   </li>
                 </ol>
               </div>
@@ -187,15 +185,19 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi về tư duy logic<br> &nbsp; &nbsp; và phản biện khi trình bày / báo cáo với Cấp trên
+                    2. Anh/Chị quan tâm, mong muốn học hỏi về tư duy logic<br />
+                    &nbsp; &nbsp; và phản biện khi trình bày / báo cáo với Cấp
+                    trên
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1 ngày</p>
+              </div>
+              <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
-                <p>
-                  Thông báo sau.
-                </p>
+                <p>Thông báo sau.</p>
               </div>
               <div class="overview-info-item">
                 <a
@@ -269,28 +271,28 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue "><span class='text-blue'>Phần 1: </span>Tư duy phản biện & tư duy logic </h4>
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue">Phần 1: </span>Tư duy phản biện & tư
+                  duy logic
+                </h4>
                 <ol>
-                  <li> 1.	Tư duy phản biện là gì? Tư duy logic là gì?</li>
-                  <li>2.	8 tiêu chuẩn của tư duy phản biện & tư duy logic </li>
-                  <li>
-                    3.	3 lợi ích của tư duy phản biện & tư duy logic 
-                  </li>
-                  <li>
-                    4.	Sự khác biệt giữa tư duy phản biện & phản đối
-                  </li>
-                  <li>5.	Rào cản tư duy phản biện </li>
-                  <li>6.	Đặc điểm người tư duy phản biện</li>
+                  <li>1. Tư duy phản biện là gì? Tư duy logic là gì?</li>
+                  <li>2. 8 tiêu chuẩn của tư duy phản biện & tư duy logic</li>
+                  <li>3. 3 lợi ích của tư duy phản biện & tư duy logic</li>
+                  <li>4. Sự khác biệt giữa tư duy phản biện & phản đối</li>
+                  <li>5. Rào cản tư duy phản biện</li>
+                  <li>6. Đặc điểm người tư duy phản biện</li>
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần 2:</span> Ứng dụng tư duy phản biện &<br> tư duy logic khi thuyết trình / báo cáo với cấp trên 
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue">Phần 2:</span> Ứng dụng tư duy phản
+                  biện &<br />
+                  tư duy logic khi thuyết trình /<br />
+                  báo cáo với cấp trên
                 </h4>
                 <ol>
-                  <li>
-                    1.	Tầm quan trọng của báo cáo, thuyết trình                     
-                  </li>
+                  <li>1. Tầm quan trọng của báo cáo, thuyết trình</li>
                   <li>
                     2. 2 phương pháp cơ bản
                     <ol>
@@ -299,7 +301,7 @@
                     </ol>
                   </li>
                   <li>
-                    3. Những nguyên tắc quan trọng trong thuyết trình / báo cáo  
+                    3. Những nguyên tắc quan trọng trong thuyết trình / báo cáo
                     <ul>
                       <li>- 7-38,55</li>
                       <li>- Quy trình 3 bước L-T-S</li>
@@ -307,7 +309,12 @@
                       <li>- Lắng nghe thấu cảm v.v..</li>
                     </ul>
                   </li>
-                  <li>4.	Ứng dụng tư duy phản biện & tư duy logic khi thuyết trình /<br> &nbsp; &nbsp; báo cáo với cấp trên trong từng tình huống cụ thể</li>
+                  <li>
+                    4. Ứng dụng tư duy phản biện & tư duy logic khi thuyết trình
+                    /<br />
+                    &nbsp; &nbsp; báo cáo với cấp trên trong từng tình huống cụ
+                    thể
+                  </li>
                 </ol>
               </div>
             </div>
@@ -329,9 +336,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
                 việc hiện tại
@@ -343,9 +350,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
                 tôi
@@ -357,9 +364,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Học hỏi và bổ sung nhiều kiến thức cho bản thân.
               </div>
