--- a/middleManagamentSkill.html
+++ b/middleManagamentSkill.html
@@ -114,37 +114,34 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">
-          Nâng cao năng lực quản trị cho cấp trung
-        </h2>
-        <div class="breadcrumbs">
+        <div class='img-demo' ></div>
+        
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Nâng cao năng lực quản trị cho cấp trung</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left uppercase">
+              <!-- <h2 class="title-line-left uppercase">
                 Nâng cao năng lực quản lý & lãnh đạo, giúp cấp dưới phát triển & hoàn thành mục tiêu
+              </h2> -->
+              <h2 class="title-line-left text-black uppercase">
+                Nâng cao năng lực quản trị cho<br> cấp trung
               </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>2-3 ngày</p>
-              </div>
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -172,6 +169,10 @@
                     chuyên nghiệp tại DN Nhật
                   </li>
                 </ol>
+              </div>
+              <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>2-3 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
@@ -251,7 +252,7 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue"><span class="text-blue">Phần I: </span>Chân dung của người quản lý cấp trung</h4>
+                <h4 class="title text-blue uppercase"><span class="text-blue uppercase">Phần I: </span>Chân dung của người quản lý cấp trung</h4>
                 <ol>
                   <li>1. Vai trò và nhiệm vụ của người quản lý 
                     </li>
@@ -265,8 +266,8 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần II:</span> Kỹ năng cần có của người Quản lý chuyên nghiệp 
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần II:</span> Kỹ năng cần có của người Quản lý chuyên nghiệp 
                 </h4>
                 <ol>
                   <li>
@@ -303,9 +304,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
                 việc hiện tại
@@ -317,9 +318,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
                 tôi
@@ -331,9 +332,9 @@
           <div class="slide-testimonial">
             <div class="testimonial-item">
               <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Học hỏi và bổ sung nhiều kiến thức cho bản thân.
               </div>
