--- a/motivatedCommunication.html
+++ b/motivatedCommunication.html
@@ -103,17 +103,17 @@
   <!--=================== HEADER END ===================-->
 
   <!--=================== PAGE-TITLE ===================-->
-  <div class="page-title" style="background-image: url(assets/img/banner-seminar.jpg)">
+  <div class="page-title" >
     <div class="container">
-      <h2 class="title-line-left text-white">Kĩ năng giao tiếp tạo động lực cho nhân viên</h2>
-      <div class="breadcrumbs">
+      <div class='img-demo' ></div>
+      <!-- <div class="breadcrumbs">
         <ul>
           <li class="text-blue">
             <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
           </li>
           <li class="text-blue">Motivated Communication </li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </div>
   <!--================= PAGE-TITLE END =================-->
@@ -124,9 +124,8 @@
       <div class="row">
         <div class="col-12 col-md-6">
           <div class="overview-info">
-            <h2 class="title-line-left">
-              NÂNG CAO KỸ NĂNG GIAO TIẾP HIỆU QUẢ
-            </h2>
+            <h2 class="title-line-left text-black uppercase">Kĩ năng giao tiếp tạo động lực cho nhân viên</h2>
+
             <div class="overview-info-item">
               <h5>Thời gian học dự kiến</h5>
               <p>2 ngày</p>
@@ -135,10 +134,10 @@
               <h5>GIÁ TRỊ MANG LẠI</h5>
               <ol>
                 <li>
-                  1. THẤU HIỂU tầm quan trọng của giao tiếp với vai trò Quản lý
+                  1. THẤU HIỂU tầm quan trọng của giao tiếp với vai trò <br> &nbsp; &nbsp; Quản lý
                 </li>
                 <li> 2. NẮM VỮNG các công cụ thấu hiểu Nhân viên</li>
-                <li>3. VẬN DỤNG các nguyên tắc, kỹ thuật giao tiếp, tạo động lực cho Nhân viên</li>
+                <li>3. VẬN DỤNG các nguyên tắc, kỹ thuật giao tiếp,<br> &nbsp; &nbsp; tạo động lực cho Nhân viên</li>
                 <li>
                   4. ÁP DỤNG vào thực tiễn với nhiều mô hình linh hoạt
                 </li>
@@ -150,16 +149,15 @@
               <ol>
                 <li>1. Cấp Quản lý </li>
                 <li>
-                  2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng, kiến thức giao tiếp thấu cảm, tạo động lực cho
-                  Nhân viên
+                  2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng,<br> &nbsp; &nbsp; kiến thức giao tiếp thấu cảm, tạo động lực cho
+                  <br> &nbsp; &nbsp; Nhân viên
                 </li>
               </ol>
             </div>
             <div class="overview-info-item">
               <h5>ĐỊA ĐIỂM:</h5>
               <p>
-                Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                Hòa, Đồng Nai
+                Thông báo sau.
               </p>
             </div>
             <div class="overview-info-item">
@@ -228,19 +226,19 @@
         <div class="col-12 col-sm-6">
           <div class="history-info-cover">
             <div class="history-info">
-              <h4 class="title">
-                <span>Chương 1: </span>VAI TRÒ & NHIỆM VỤ CỦA CẤP TRÊN
+              <h4 class="title text-blue">
+                <span class='uppercase text-blue'>Chương 1: </span>VAI TRÒ & NHIỆM VỤ CỦA CẤP TRÊN
               </h4>
               <ol>
-                <li> 2 nhiệm vụ chính của người Quản lý</li>
-                <li>Yếu tố 3E của người Quản lý</li>
+                <li>1. 2 nhiệm vụ chính của người Quản lý</li>
+                <li>2. Yếu tố 3E của người Quản lý</li>
                 <li>3. A.S.K cần có của người Quản lý </li>
               </ol>
             </div>
 
             <div class="history-info">
-              <h4 class="title uppercase">
-                <span>Chương 2:</span> GIAO TIẾP & TẦM QUAN TRỌNG
+              <h4 class="title text-blue uppercase">
+                <span class='uppercase text-blue'>Chương 2:</span> GIAO TIẾP & TẦM QUAN TRỌNG
               </h4>
               <ol>
                 <li>Giao tiếp & mục đích</li>
@@ -253,8 +251,8 @@
             </div>
 
             <div class="history-info">
-              <h4 class="title uppercase">
-                <span>Chương 3: </span>4 NGUYÊN TẮC CƠ BẢN TRONG GIAO TIẾP
+              <h4 class="title text-blue uppercase">
+                <span class='uppercase text-blue'>Chương 3: </span>4 NGUYÊN TẮC CƠ BẢN TRONG GIAO TIẾP
               </h4>
               <ol>
                 <li>Nguyên tắc 1: Cửa sổ Johari </li>
@@ -266,8 +264,8 @@
             </div>
 
             <div class="history-info">
-              <h4 class="title uppercase">
-                <span>Chương 4: </span>NÂNG CAO KỸ NĂNG GIAO TIẾP, TẠO ĐỘNG LỰC CHO NHÂN VIÊN
+              <h4 class="title text-blue uppercase">
+                <span class='uppercase text-blue'>Chương 4: </span>NÂNG CAO KỸ NĂNG GIAO TIẾP, TẠO ĐỘNG LỰC CHO NHÂN VIÊN
               </h4>
               <h5>4 bước thực hiện theo mô hình A.B.C.D </h5>
               <h6>1. Am hiểu Nhân viên
