--- a/peakPerformance.html
+++ b/peakPerformance.html
@@ -114,12 +114,11 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Để luôn đạt hiệu suất cao nhất 
+        <div class='img-demo' ></div>
           </h2>
-        <div class="breadcrumbs">
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
@@ -127,13 +126,13 @@
             <li class="text-blue">Để luôn đạt hiệu suất cao nhất 
               </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
@@ -142,10 +141,8 @@
                 Để luôn đạt hiệu suất công việc cao nhất 
 (Peak Performance) tại Doanh nghiệp
               </h2> -->
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1 ngày</p>
-              </div>
+              <h2 class="title-line-left text-black uppercase">Để luôn đạt hiệu suất cao nhất 
+</h2>
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -156,8 +153,8 @@
                     2. Hiểu rõ hơn về suy nghĩ, cách làm việc của người Nhật
                   </li>
                   <li>
-                    3. Hệ thống hóa các kỹ năng, kiến thức cơ bản của tác phong
-                    làm việc chuyên nghiệp
+                    3. Hệ thống hóa các kỹ năng, kiến thức cơ bản của<br> &nbsp; &nbsp; tác phong
+                     làm việc chuyên nghiệp
                   </li>
                   <li>4. Giúp ngày càng nâng cao chất lượng công việc</li>
                 </ol>
@@ -168,16 +165,19 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi tác phong làm việc
+                    2. Anh/Chị quan tâm, mong muốn học hỏi<br> &nbsp; &nbsp; tác phong làm việc
                     chuyên nghiệp tại DN Nhật
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1 ngày</p>
+              </div>
+              <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
                 <p>
-                  Lầu 2, Toà nhà trung tâm dịch vụ Amata, phường Long Bình, Biên
-                  Hòa, Đồng Nai
+                 Thông báo sau.
                 </p>
               </div>
               <div class="overview-info-item">
@@ -251,7 +251,7 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title"><span>Phần I: </span>DẪN NHẬP</h4>
+                <h4 class="title text-blue uppercase"><span class="text-blue">Phần I: </span>DẪN NHẬP</h4>
                 <ol>
                   <li>1. Hiểu về tổ chức</li>
                   <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
@@ -266,8 +266,8 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title">
-                  <span>Phần II:</span> Để nâng cao tác phong làm việc chuyên
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue">Phần II:</span> Để nâng cao tác phong làm việc chuyên
                   nghiệp cơ bản tại doanh nghiệp Nhật
                 </h4>
                 <ol>
