--- a/presentationSkill.html
+++ b/presentationSkill.html
@@ -134,33 +134,30 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Kĩ năng thuyết trình</h2>
-        <div class="breadcrumbs">
+        <div class='img-demo' ></div>
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Kĩ năng thuyết trình</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">KỸ NĂNG THUYẾT TRÌNH HIỆU QUẢ</h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1-2 ngày</p>
-              </div>
+              <!-- <h2 class="title-line-left">KỸ NĂNG THUYẾT TRÌNH HIỆU QUẢ</h2> -->
+              <h2 class="title-line-left text-black uppercase">Kĩ năng<br> thuyết trình</h2>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -181,6 +178,10 @@
                     thức về kỹ năng thuyết trình
                   </li>
                 </ol>
+              </div>
+              <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1-2 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
@@ -258,7 +259,7 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue"><span class='text-blue'>Phần 1: </span> Tầm quan trọng</h4>
+                <h4 class="title text-blue uppercase"><span class='text-blue'>Phần 1: </span> Tầm quan trọng</h4>
                 <ol>
                   <li>1. 3 yếu tố chính của thuyết trình</li>
                   <li>2. Mục đích</li>
@@ -267,7 +268,7 @@
               </div>
 
               <div class="history-info">
-                <h4 class="title text-blue">
+                <h4 class="title text-blue uppercase">
                   <span class="text-blue">Phần 2:</span> Để thuyết trình hiệu quả
                 </h4>
                 <ol>
@@ -296,7 +297,7 @@
               </div>
 
               <div class="history-info">
-                <h4 class="title text-blue">
+                <h4 class="title text-blue uppercase">
                   <span class="text-blue">Phần 3: </span> Phát huy kỹ năng thuyết trình trong công
                   việc
                 </h4>
