--- a/resolvingConflicts.html
+++ b/resolvingConflicts.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
-    <title>Omotenashi</title>
+    <title>Resolving Conflicts - Omotenashi</title>
     <!-- ===================== META ===================== -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -140,7 +140,7 @@
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">NÂNG CAO NĂNG LỰC QUẢN TRỊ DOANH NGHIỆP</li>
+            <li class="text-blue">Kĩ năng thuyết trình</li>
           </ul>
         </div> -->
       </div>
@@ -153,26 +153,28 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left text-black">
-                NÂNG CAO NĂNG LỰC QUẢN TRỊ DOANH NGHIỆP
+              <!-- <h2 class="title-line-left">KỸ NĂNG THUYẾT TRÌNH HIỆU QUẢ</h2> -->
+              <h2 class="title-line-left text-black uppercase">
+                GIỮ HÒA KHÍ KHI XỬ LÝ MÂU THUẪN PHÁT SINH TRONG CÔNG VIỆC
               </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1 ngày</p>
-              </div>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
                 <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
-                  <li>1. Nắm bắt chu trình phát triển năng lực quản trị</li>
-                  <li>2. Phân biệt giữa lãnh đạo và quản trị</li>
-                  <li>3. Hiểu rõ chân dung nhà quản trị chuyên nghiệp</li>
-                  <li>4. Nhận thức vai trò và chức năng của người quản trị</li>
                   <li>
-                    5. Xây dựng khả năng tương tác với các cấp quản trị, các
-                    <br />
-                    &nbsp; &nbsp; phòng ban khác hiệu quả hơn
+                    1. Nắm rõ nguyên nhân chủ quan của các mâu thuẫn phát sinh
+                  </li>
+                  <li>
+                    2. Điều chỉnh thái độ phù hợp khi xử lý mâu thuẫn phát sinh
+                  </li>
+                  <li>
+                    3. Nắm rõ các bước cơ bản để xử lý mâu thuẫn phát sinh
+                  </li>
+                  <li>
+                    4. Hiểu rõ nguyên tắc & điểm lưu ý để luôn giữ hòa khí khi
+                    xử lý mâu thuẫn phát sinh
                   </li>
                 </ol>
               </div>
@@ -182,16 +184,18 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi tác phong<br> &nbsp; &nbsp; làm việc
-                    chuyên nghiệp tại DN Nhật
+                    2. Anh/Chị quan tâm, mong muốn học hỏi các kỹ năng<br />
+                    &nbsp; &nbsp; xử lý các mâu thuẫn trong công việc.
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1-2 ngày</p>
+              </div>
+              <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
-                <p>
-                  Thông báo sau.
-                </p>
+                <p>Thông báo sau.</p>
               </div>
               <div class="overview-info-item">
                 <a
@@ -265,38 +269,79 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue uppercase">
-                  <span class="uppercase text-blue">Phần 1: </span>Chân dung nhà quản trị chuyên nghiệp
-                </h4>
+                <h4 class="title text-blue uppercase">Phần 1: Tổng quan</h4>
                 <ol>
-                  <li>1. Hiểu về tổ chức</li>
-                  <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
+                  <li>1. Mâu thuẫn là gì?</li>
                   <li>
-                    3. Đặc trưng cơ bản của doanh nghiệp Nhật/người Nhật <br> &nbsp; &nbsp;  và
-                    doanh nghiệp Việt/người Việt
+                    2. Tầm quan trọng của xử lý mâu thuẫn phát sinh trong công
+                    việc
                   </li>
                   <li>
-                    4. Để làm việc hiệu quả tại doanh nghiệp Nhật Bản,<br> &nbsp; &nbsp; tác
-                    phong/kỹ năng cơ bản cần lưu ý
+                    3. Nguyên nhân chủ yếu dẫn đến mâu thuẫn phát sinh trong
+                    công việc
+                    <ol>
+                      <li>3.1 Trách nhiệm chồng chéo</li>
+                      <li>
+                        3.2 Sự khác biệt về văn hóa, xuất phát điểm, lập trường,
+                        quan điểm cá nhân
+                      </li>
+                      <li>3.3 Hiều lầm</li>
+                      <li>3.4 Cố chấp</li>
+                      <li>3.5 Thiếu tin tưởng, mất lòng tin</li>
+                    </ol>
+                  </li>
+                  <li>
+                    4. Các phong cách xử lý mâu thuẫn thường gặp
+                    <ol>
+                      <li>Cạnh tranh</li>
+                      <li>Nhượng bộ</li>
+                      <li>Thỏa hiệp</li>
+                      <li>Lảng tránh</li>
+                      <li>Hợp tác</li>
+                    </ol>
                   </li>
                 </ol>
               </div>
+
               <div class="history-info">
                 <h4 class="title text-blue uppercase">
-                  <span class="uppercase text-blue">Phần 2: </span> Nâng cao năng lực quản trị doanh
-                  nghiệp
+                  Phần 2: Kỹ năng thiết yếu giữ hòa khí khi xử lý mâu thuẫn phát
+                  sinh trong công việc
                 </h4>
                 <ol>
-                  <li>1. Khái niệm quản trị nguồn nhân lực</li>
-                  <li>2. So sánh quản trị nhân sự và quản trị nguồn nhân lực</li>
-                  <li>
-                    3. Các hoạt động quản trị nguồn nhân lực cơ bản
-                  </li>
-                  <li>4. Phẩm chất và khả năng của quản trị</li>
-                  <li>5. Năng cao năng lực lãnh đạo</li>
-                  <li>6. Nâng cao năng lực giao tiếp</li>
-                  <li>7. Các chiến lược giao tiếp</li>
+                  <li>1. Cơn giận & cách chế ngự cảm xúc</li>
+                  <li>2. Đồng cảm</li>
+                  <li>3. Lắng nghe thấu cảm</li>
                 </ol>
+              </div>
+
+              <div class="history-info">
+                <h4 class="title text-blue uppercase">
+                  Phần 3: Xử lý mâu thuẫn phát sinh trong công việc
+                </h4>
+                <ul>
+                  <li>
+                    1. Các bước xử lý
+                    <ol>
+                      <li>
+                        1.1 Cung cấp thông tin liên quan hoặc làm rõ thông tin
+                        liên quan
+                      </li>
+                      <li>1.2 Tập trung xác định vấn đề/nguyên nhân gốc rễ</li>
+                      <li>1.3 Đối thoại trực tiếp, trao đổi ý kiến</li>
+                      <li>1.4 Đề xuất & chọn giải pháp</li>
+                    </ol>
+                  </li>
+                  <li>2. Các nguyên tắc cần tuân thủ khi xử lý</li>
+                  <li>3. Các điểm lưu ý khi xử lý</li>
+                </ul>
+              </div>
+
+              <div class="history-info">
+                <h4 class="title text-blue uppercase">
+                  Phần 4: Trao đổi ý kiến, kinh nghiệm, thực hành đóng vai, xử
+                  lý tình huống, giải đáp thắc mắc từ người tham dự
+                </h4>
               </div>
             </div>
           </div>
@@ -306,58 +351,7 @@
     <!--================= OUR-HISTORY END =================-->
 
     <!--================= S-TESTIMONIALS =================-->
-    <section class="s-testimonials about-testimonials-slider">
-      <div class="container">
-        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
-        <!-- <p class="slogan">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore.
-		  </p> -->
-        <div class="slider-testimonials">
-          <div class="slide-testimonial">
-            <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
-              <div class="testimon-content">
-                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
-                việc hiện tại
-              </div>
-              <!-- <h4 class="name">Louisa Russell</h4>
-				<div class="prof">Regular Client</div> -->
-            </div>
-          </div>
-          <div class="slide-testimonial">
-            <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
-              <div class="testimon-content">
-                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
-                tôi
-              </div>
-              <!-- <h4 class="name">Samson Peters</h4>
-				<div class="prof">Regular Client</div> -->
-            </div>
-          </div>
-          <div class="slide-testimonial">
-            <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
-              <div class="testimon-content">
-                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
-              </div>
-              <!-- <h4 class="name">Marry James</h4>
-				<div class="prof">Regular Client</div> -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <!--=============== S-TESTIMONIALS END ===============-->
 
     <!--===================== FOOTER =====================-->
