--- a/seminor.html
+++ b/seminor.html
@@ -115,7 +115,7 @@
   <!--================= PAGE-TITLE END =================-->
 
   <!--=================== S-OUR-TEAM ===================-->
-  <section class="s-our-team about-team speakers-our-team pad-10">
+  <section class="s-our-team about-team speakers-our-team ">
     <div class="our-team-bg" style="background-image: url(assets/img/bg-team-about.svg)"></div>
     <div class="container">
       <!-- <h2 class="title-line uppercase">Tất cả hội thảo</h2> -->
@@ -336,11 +336,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="trainTheTrainer.html" class="team-img">
             <img src="assets/img/thumb18.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">
+            <a href="trainTheTrainer.html">
               Đào tạo người huấn luyện <br> (Train The Trainer)
             </a>
             
@@ -349,11 +349,11 @@
         </div>
 
         <div class="col-6 col-sm-4 team-item">
-          <a href="enhancePositiveThinking.html" class="team-img">
+          <a href="resolvingConflicts.html" class="team-img">
             <img src="assets/img/thumb19.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="enhancePositiveThinking.html">
+            <a href="resolvingConflicts.html">
               Giải quyết mâu thuẫn <br> (Resolving Conflicts at Work)
             </a>
            
@@ -387,11 +387,11 @@
 
         </div>
         <div class="col-6 col-sm-4 team-item">
-          <a href="businessManner.html" class="team-img">
+          <a href="semiCSKH.html" class="team-img">
             <img src="assets/img/thumb22.png" alt="team" />
           </a>
           <h4 class="title text-hidden">
-            <a href="businessManner.html">
+            <a href="semiCSKH.html">
               Chăm sóc Khách hàng <br> Omotenashi
             </a>
           </h4>
