--- a/teamworkLeadership.html
+++ b/teamworkLeadership.html
@@ -114,35 +114,32 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Tinh thần làm việc nhóm và lãnh đạo</h2>
-        <div class="breadcrumbs">
+        <div class='img-demo' ></div>
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Tinh thần làm việc nhóm và lãnh đạo</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
+              <!-- <h2 class="title-line-left">
                 PHÁT HUY TINH THẦN LÀM VIỆC NHÓM VÀ NĂNG LỰC LÃNH ĐẠO
-              </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1-2 ngày</p>
-              </div>
+              </h2> -->
+              <h2 class="title-line-left text-black uppercase">Tinh thần làm việc nhóm và lãnh đạo</h2>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -168,6 +165,10 @@
                     dắt đội nhóm hoàn thành mục tiêu
                   </li>
                 </ol>
+              </div>
+              <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1-2 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
@@ -247,18 +248,18 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần I: </span> Định nghĩa và tầm quan trọng
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 1: </span> Định nghĩa và tầm quan trọng
                 </h4>
                 <ol>
-                  <li>1. Định nghĩa</li>
+                  <li>1. Định nghĩa</li>
                   <li>2. Những điểm thuận lợi và khó khăn khi làm việc nhóm</li>
                   <li>3. Tầm quan trọng khi làm việc nhóm</li>
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần II:</span> Để phát huy tinh thần team-work
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 2:</span> Để phát huy tinh thần team-work
                 </h4>
 
                 <ol>
@@ -273,8 +274,8 @@
               </div>
 
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần III: </span>Các kỹ năng cần thiết để làm việc nhóm
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 3: </span>Các kỹ năng cần thiết để làm việc nhóm
                   hiệu quả
                 </h4>
 
@@ -328,9 +329,9 @@
         <div class="slider-testimonials">
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Chương trình giúp tôi học hỏi rất nhiều về tinh thần teamwork , vai trò của người quản lý trong việc giải quyết công việc. Cảm ơn sự hỗ trợ của ban giám đốc cũng như anh em đồng nghiệp. Đặc biệt là giảng viên xinh đẹp Ms. Thảo
               </div>
@@ -339,9 +340,9 @@
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Rất bổ ích, giúp bản thân hiểu sâu hơn những điều còn chưa tốt. Suy nghĩ tích cực hơn. Bản thân đánh giá cao về nội dung và mong được tham gia chương trình nhiều hơn
               </div>
@@ -350,9 +351,9 @@
           </div>
           <div class="slide-testimonial">
             <div class="testimonial-item">
-              <span class="slide-quote"
+              <!-- <span class="slide-quote"
                 ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
+              ></span> -->
               <div class="testimon-content">
                 Sau khi được đào tạo, tôi thấy chương trình rất bổ ích, giúp nâng cao kỹ năng, thái độ của nhân viên trong công việc. Giúp phát triển bản thân hơn
               </div>
