--- a/timeManagement.html
+++ b/timeManagement.html
@@ -114,33 +114,31 @@
     <!--=================== PAGE-TITLE ===================-->
     <div
       class="page-title"
-      style="background-image: url(assets/img/banner-seminar.jpg)"
+      
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Quản lý thời gian</h2>
-        <div class="breadcrumbs">
+        <div class='img-demo' ></div>
+        <!-- <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
             <li class="text-blue">Quản lý thời gian</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
     <!--================= PAGE-TITLE END =================-->
 
     <!--==================== OVERVIEW ====================-->
-    <section class="overview">
+    <section class="overview pad-10">
       <div class="container">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">QUẢN LÝ THỜI GIAN HIỆU QUẢ</h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1 ngày</p>
-              </div>
+              <!-- <h2 class="title-line-left">QUẢN LÝ THỜI GIAN HIỆU QUẢ</h2> -->
+              <h2 class="title-line-left text-black uppercase">Quản lý thời gian</h2>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
@@ -181,6 +179,10 @@
                     thức về quản lý thời gian hiệu quả
                   </li>
                 </ol>
+              </div>
+              <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1 ngày</p>
               </div>
               <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
@@ -257,7 +259,7 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue"><span class='text-blue'>Phần 1: </span> Tầm quan trọng</h4>
+                <h4 class="title text-blue uppercase"><span class='text-blue uppercase'>Phần 1: </span> Tầm quan trọng</h4>
                 <ol>
                   <li>
                     1. Quản lý thời gian là gì? Chúng ta có quản lý được<br> &nbsp; &nbsp; thời
@@ -272,8 +274,8 @@
                 </ol>
               </div>
               <div class="history-info">
-                <h4 class="title text-blue">
-                  <span class="text-blue">Phần 2:</span> Để quản lý thời gian hiệu quả
+                <h4 class="title text-blue uppercase">
+                  <span class="text-blue uppercase">Phần 2:</span> Để quản lý thời gian hiệu quả
                 </h4>
                 <h5>I. THẤU HIỂU</h5>
                 <ol>
