--- a/trainTheTrainer.html
+++ b/trainTheTrainer.html
@@ -2,7 +2,7 @@
 <html lang="zxx">
   <head>
     <meta charset="UTF-8" />
-    <title>Omotenashi</title>
+    <title>Train the Trainer - Omotenashi</title>
     <!-- ===================== META ===================== -->
     <meta name="keywords" content="" />
     <meta name="description" content="" />
@@ -140,7 +140,7 @@
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">NÂNG CAO NĂNG LỰC QUẢN TRỊ DOANH NGHIỆP</li>
+            <li class="text-blue">Coaching Skills</li>
           </ul>
         </div> -->
       </div>
@@ -153,26 +153,49 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left text-black">
-                NÂNG CAO NĂNG LỰC QUẢN TRỊ DOANH NGHIỆP
+              <h2 class="title-line-left text-black uppercase">
+                ĐÀO TẠO NGƯỜI HUẤN LUYỆN NỘI BỘ
               </h2>
-              <div class="overview-info-item">
-                <h5>Thời gian học dự kiến</h5>
-                <p>1 ngày</p>
-              </div>
+
               <div class="overview-info-item">
                 <h5>GIÁ TRỊ MANG LẠI</h5>
 
-                <span>Mục đích nhằm giúp học viên:</span>
+                <span>NGƯỜI THAM DỰ</span>
                 <ol>
-                  <li>1. Nắm bắt chu trình phát triển năng lực quản trị</li>
-                  <li>2. Phân biệt giữa lãnh đạo và quản trị</li>
-                  <li>3. Hiểu rõ chân dung nhà quản trị chuyên nghiệp</li>
-                  <li>4. Nhận thức vai trò và chức năng của người quản trị</li>
                   <li>
-                    5. Xây dựng khả năng tương tác với các cấp quản trị, các
-                    <br />
-                    &nbsp; &nbsp; phòng ban khác hiệu quả hơn
+                    1. PHÂN TÍCH ĐƯỢC nhu cầu đào tạo và mong đợi của<br />
+                    &nbsp; &nbsp; học viên
+                  </li>
+                  <li>
+                    2. NẮM VỮNG các mức độ tiếp thu và ghi nhớ làm nên<br />
+                    &nbsp; &nbsp; nền tảng cho mọi phương pháp đào tạo hiệu quả
+                    của<br />
+                    &nbsp; &nbsp; chuyên gia đầu ngành đang áp dụng
+                  </li>
+                  <li>
+                    3. PHÁT TRIỂN ĐƯỢC nội dung đào tạo theo công thức<br />
+                    &nbsp; &nbsp; POST, soạn bài giảng và giáo án sát thực tiễn
+                  </li>
+                  <li>4. SỞ HỮU 07 bước mở đầu ấn tượng</li>
+                  <li>
+                    5. BIẾT CÁCH khai thác các kỹ thuật truyền đạt và <br />
+                    &nbsp; &nbsp;dẫn giảng lôi cuốn
+                  </li>
+                  <li>
+                    6. ÁP DỤNG các phương pháp để thay đổi trạng thái và<br />
+                    &nbsp; &nbsp; duy trì năng lượng
+                  </li>
+                  <li>
+                    6. ÁP DỤNG các phương pháp để thay đổi trạng thái và<br />
+                    &nbsp; &nbsp; duy trì năng lượng
+                  </li>
+                  <li>
+                    8. VẬN DỤNG các bước đơn giản để điều phối Q&A và<br />
+                    &nbsp; &nbsp; kết thúc ấn tượng T.T.U.T
+                  </li>
+                  <li>
+                    9. FOLLOW action plan (kế hoạch hành động) sau<br />
+                    &nbsp; &nbsp; khoá học của học viên
                   </li>
                 </ol>
               </div>
@@ -182,16 +205,18 @@
                 <ol>
                   <li>1. Cấp Nhân viên</li>
                   <li>
-                    2. Anh/Chị quan tâm, mong muốn học hỏi tác phong<br> &nbsp; &nbsp; làm việc
-                    chuyên nghiệp tại DN Nhật
+                  2. Anh/Chị quan tâm, mong muốn học hỏi kĩ năng người
+                    <br/> &nbsp; &nbsp; huấn luyện nội bộ
                   </li>
                 </ol>
               </div>
               <div class="overview-info-item">
+                <h5>Thời gian học dự kiến</h5>
+                <p>1 ngày</p>
+              </div>
+              <div class="overview-info-item">
                 <h5>ĐỊA ĐIỂM:</h5>
-                <p>
-                  Thông báo sau.
-                </p>
+                <p>Thông báo sau.</p>
               </div>
               <div class="overview-info-item">
                 <a
@@ -265,37 +290,81 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title text-blue uppercase">
-                  <span class="uppercase text-blue">Phần 1: </span>Chân dung nhà quản trị chuyên nghiệp
-                </h4>
+                <h4 class="title text-blue uppercase">Phần 1: Tổng quan</h4>
+
                 <ol>
-                  <li>1. Hiểu về tổ chức</li>
-                  <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
+                  <li>1. Tầm quan trọng của đào tạo đội ngũ</li>
                   <li>
-                    3. Đặc trưng cơ bản của doanh nghiệp Nhật/người Nhật <br> &nbsp; &nbsp;  và
-                    doanh nghiệp Việt/người Việt
+                    2. Vai trò và trách nhiệm của quản lý đối với công tác đào
+                    tạo đội ngũ
                   </li>
                   <li>
-                    4. Để làm việc hiệu quả tại doanh nghiệp Nhật Bản,<br> &nbsp; &nbsp; tác
-                    phong/kỹ năng cơ bản cần lưu ý
+                    3. Tầm quan trọng của việc đào tạo, huấn luyện đội ngũ
                   </li>
                 </ol>
               </div>
+
               <div class="history-info">
                 <h4 class="title text-blue uppercase">
-                  <span class="uppercase text-blue">Phần 2: </span> Nâng cao năng lực quản trị doanh
-                  nghiệp
+                  Phần 2. Kiến thức & kỹ năng cơ bản cần có của 1 Trainer
                 </h4>
                 <ol>
-                  <li>1. Khái niệm quản trị nguồn nhân lực</li>
-                  <li>2. So sánh quản trị nhân sự và quản trị nguồn nhân lực</li>
+                  <li>1. Phân biệt giữa Giáo dục – Đào Tạo – Huấn luyện</li>
+                  <li>2. Yếu tố 3E và A.S.K cần có</li>
+                  <li>3. 3 bước chính triển khai nội dung đào tạo</li>
+                </ol>
+              </div>
+
+              <div class="history-info">
+                <h4 class="title text-blue uppercase">
+                  Phần 3: Để trở thành Giảng viên đào tạo nội bộ chuyên nghiệp
+                </h4>
+                <ol>
                   <li>
-                    3. Các hoạt động quản trị nguồn nhân lực cơ bản
+                    I. Phân tích nhu cầu đào tạo và mong đợi của học viên
+                    <ol>
+                      <li>1. Phân tích nhu cầu đào tạo</li>
+                      <li>2. Phân tích mong đợi của học viên</li>
+                    </ol>
                   </li>
-                  <li>4. Phẩm chất và khả năng của quản trị</li>
-                  <li>5. Năng cao năng lực lãnh đạo</li>
-                  <li>6. Nâng cao năng lực giao tiếp</li>
-                  <li>7. Các chiến lược giao tiếp</li>
+                  <br>
+                  <li>
+                    II. Xây dựng nội dung bài giảng sát thực tế
+                    <ol>
+                      <li>1. Công thức POST</li>
+                      <li>2. Công thức W-H-W; TT – NN – GP</li>
+                      <li>
+                        3. Công thức W-W-O soạn timeline (giáo án) chi tiết &
+                        chuyên biệt
+                      </li>
+                    </ol>
+                  </li>
+                  <br>
+                  <li>
+                    III. Dẫn giảng lôi cuốn và thuyết phục
+                    <ol>
+                      <li>1. Mở đầu thu hút & ấn tượng</li>
+                      <li>2. Kỹ thuật điều phối và kêu gọi hành động</li>
+                      <li>3. 9 kỹ thuật dẫn giảng thành công</li>
+                    </ol>
+                  </li>
+                  <br>
+                  <li>IV.	Làm chủ tình huống Q&A </li>
+                  <br>
+                  <li>V.	Kết thúc ấn tượng 
+                    <ol>
+                      <li>1.	5 kỹ thuật ôn tập hiệu quả</li>
+                      <li>2.	Công thức TTUT kết thúc buổi đào tạo </li>
+                    </ol>
+                  </li>
+                  <br>
+                  <li>VI.	Theo dõi Action plan (kế hoạch hành động) sau khoá học
+                    <ol>
+                      <li>1.	Soạn action plan theo nhu cầu, hiện trạng của DN</li>
+                      <li>2.	Kỹ thuật theo dõi, nhắc nhở</li>
+                      <li>3.	Phương pháp Coaching cơ bản theo công thức T-GROW giúp học viên hoàn thành mục tiêu trong action plan đã đề ra</li>
+                    </ol>
+                  </li>
                 </ol>
               </div>
             </div>
@@ -306,58 +375,7 @@
     <!--================= OUR-HISTORY END =================-->
 
     <!--================= S-TESTIMONIALS =================-->
-    <section class="s-testimonials about-testimonials-slider">
-      <div class="container">
-        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
-        <!-- <p class="slogan">
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore.
-		  </p> -->
-        <div class="slider-testimonials">
-          <div class="slide-testimonial">
-            <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
-              <div class="testimon-content">
-                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
-                việc hiện tại
-              </div>
-              <!-- <h4 class="name">Louisa Russell</h4>
-				<div class="prof">Regular Client</div> -->
-            </div>
-          </div>
-          <div class="slide-testimonial">
-            <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
-              <div class="testimon-content">
-                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
-                tôi
-              </div>
-              <!-- <h4 class="name">Samson Peters</h4>
-				<div class="prof">Regular Client</div> -->
-            </div>
-          </div>
-          <div class="slide-testimonial">
-            <div class="testimonial-item">
-              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-              <span class="slide-quote"
-                ><i class="fa fa-quote-left" aria-hidden="true"></i
-              ></span>
-              <div class="testimon-content">
-                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
-              </div>
-              <!-- <h4 class="name">Marry James</h4>
-				<div class="prof">Regular Client</div> -->
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
     <!--=============== S-TESTIMONIALS END ===============-->
 
     <!--===================== FOOTER =====================-->
